messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
        name: messaging-service
spec:
        selector:
                app: messaging
                version: blue
        ports:
                - protocol: TCP
                  port: 80
                  targetPort: 8000
        type: ClusterIP
